# mpio

./: .gitmodules  CMakeLists.txt  README.md  design.txt
src/: in.cc  in.hh  out.cc  pak.hh  util.hh
src/datatypes/: aaBox.hh  color4f.hh  color4i.hh  fourCC.hh  quaternion.hh  vector3f.hh
